# mcphero-cli

./: README.md  pyproject.toml
.github/workflows/: pypi-deploy.yml
scripts/: update-tap.sh
spec/: agent-first-cli-guide.md
src/mcpheroctl/: __init__.py  cli.py
src/mcpheroctl/commands/: auth.py  server.py  wizard.py
src/mcpheroctl/core/: client.py  config.py  output.py
