[project]
name = "mcpheroctl"
version = "0.1.0"
description = "CLI tool for interacting with the MCPHero platform"
authors = [
    { name = "Andrew", email = "contact@arteriali.st" }
]
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.15.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "tenacity>=9.0.0",
    "rich>=13.0.0",
]

[project.scripts]
mcpheroctl = "mcpheroctl.cli:app"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"
